# mxchip-az3166

./: .gitignore  MXChip_AZ3166_DHCP_Fix_Guide.md  MXChip_AZ3166_DHCP_Troubleshooting.md  MXChip_AZ3166_Sensor_Data_Fix.md
MXChip/AZ3166/: MQTT_Troubleshooting.md  Simple_WiFi_Troubleshooting.md  WiFi_Connection_Guide.md  device.conf
MXChip/AZ3166/app/: CMakeLists.txt  azure_config.h  config_manager.c  config_manager.h  config_manager_safe.c  main.c  nx_client.c  nx_client.h  wwd_networking.c
MXChip/AZ3166/app/legacy/: mqtt.c  mqtt.c.new  mqtt.h
MXChip/AZ3166/lib/: CMakeLists.txt
MXChip/AZ3166/lib/mxchip_bsp/stm_sensor/Src/: hts221_read_data_polling.c  lis2mdl_read_data_polling.c  lps22hb_read_data_polling.c  lsm6dsl_read_data_polling.c
shared/src/: CMakeLists.txt
